# airline-management-system

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Ubuntu\home\abolaji\sshdoc.txt  Ubuntu\home\abolaji\sshdoc.txt.pub  \home\abolaji\sshdoc.txt  \home\abolaji\sshdoc.txt.pub
src/: analytics.rs  booking.rs  flightmanagement.rs  lib.rs  login.rs  main.rs  management.rs  staff.rs
src/data/: airline.db
