[package]
name = "airlinepro"
version = "0.1.0"
authors = [" Abolaji Kazeem "]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
bcrypt = "0.11.0"
dotenv = "0.15.0"
rand = "0.8"

sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }

uuid = { version = "1", features = ["v4"] } # Enable v4 feature